Changes since 1.0-beta10:
 - added accelerator buttons to configuration dialog (requires FLTK 1.3!)
 - removed fullscreen option in Windows (it never worked properly)
 - client displays data traffic (useful for network debugging)
 - tweaked movement formula slightly; makes clients incompatible!
 - changed network protocol to be more bandwidth-efficient
 - (temporarily?) removed unreliable transfer option