@@ -42,6 +42,7 @@ Reliable packets: (server->client)
         1 byte: data rate (moves per second)
         1 byte: turn rate (moves required for 360 degree turn)
         1 byte: move rate (in 1000th parts of the field per turn)
+        1 byte: line width (in 1000th parts of the field per turn)
         1 byte: warm-up time (in turns)
         1 byte: average score range (in rounds; >= 1)
         2 bytes: hole probability (Hprob; 1 in Hprob turns)
@@ -52,7 +53,7 @@ Reliable packets: (server->client)
         1 byte: number of players (P)
         4 byte: game id
 
-        (Offset is 16 here)
+        (Offset is 17 here)
 
         for each player:
         3 bytes: color (R, G, B)
